# side-quests

flask-web-scraper/: README  keywords.txt  main.py  pyproject.toml
flask-web-scraper/static/: df_style.css
flask-web-scraper/templates/: table.html
poll-app/: App.js  README.md  app.json  package-lock.json  package.json
poll-app/assets/animations/: check.json  loader.json
poll-app/components/: ActivityIndicator.js  AppButton.js  AppPicker.js  AppText.js  AppTextInput.js  Icon.js  IconButton.js  ListItem.js  ListItemDeleteAction.js  ListItemSeperator.js  PickerItem.js  Screen.js  SuccessIndicator.js
poll-app/components/forms/: AppErrorMessage.js  AppFormField.js  AppFormPicker.js  SubmitButton.js  index.js
poll-app/components/poll-list/: CardYesNo.js  CategoriesNavBar.js  CommentBox.js  CommentSubmission.js  CommentThread.js  PollsNavBar.js  index.js
poll-app/config/: colors.js
poll-app/screens/: ListingDetailsScreen.js  ListingEditScreen.js  ListingsScreen.js  LoginScreen.js  MessagesScreen.js  RegisterScreen.js  ViewImageScreen.js  WelcomeScreen.js
react-contacts/: README.md  package-lock.json  package.json  tsconfig.json
react-contacts/src/: App.tsx  types.d.ts
react-contacts/src/components/: ContactForm.tsx  ContactList.tsx  Modal.tsx
tactic/: Program.cs  tictac-csharp.csproj
tictacgo/: .gitignore  board.go  go.mod  go.sum  go.work.sum  interface.go  main.go  tictacgo
